Port JNI to FFM in web module.